--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2021"
 [dependencies]
 ansi_term = "0.12.1"
 itertools = "0.13.0"
+modinverse = "0.1.1"
+ndarray = "0.16.1"
+nom = "7.1.3"
+nom-supreme = "0.8.0"
+num = "0.4.3"
+num_enum = "0.7.3"
+parse-display = "0.10.0"
+pathfinding = "4.11.0"
+reformation = "0.5.3"
