day 7. still very slow. need to think about permutations...

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ num = "0.4.3"
 num_enum = "0.7.3"
 parse-display = "0.10.0"
 pathfinding = "4.11.0"
+platform-dirs = "0.3.0"
 reformation = "0.5.3"
