--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ quickcheck = "1.0.3"
 quickcheck_macros = "1.0.0"
 rayon = "1.10.0"
 reformation = "0.5.3"
+tiny-skia = "0.11.4"
 
 [profile.release]
 debug = true
