--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 ansi_term = "0.12.1"
+ansiterm = "0.12.2"
 indicatif = "0.17.9"
 itertools = "0.13.0"
 modinverse = "0.1.1"
