--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ num = "0.4.3"
 num_enum = "0.7.3"
 parse-display = "0.10.0"
 pathfinding = "4.11.0"
+petgraph = "0.8.3"
 platform-dirs = "0.3.0"
 proptest = "1.5.0"
 quickcheck = "1.0.3"
